# fastapi-backend

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_pwd.py
app/api/auth/: router.py  schemas.py  services.py
app/api/roles/: router.py  schemas.py
app/api/users/: router.py  schema.py
app/core/: config.py  database.py  db.py  dependencies.py  email.py  exceptions.py  security.py
app/domains/auth/: dependencies.py  exceptions.py  models.py  query.py  repository.py  service.py  services.py
app/domains/roles/: dependencies.py  models.py  service.py
app/domains/users/: service.py
app/repositories/: auth.py  base.py  role.py  user.py
app/scripts/: seed_rbac.py
app/workers/: celery.py  task.py
migrations/: env.py
migrations/versions/: 01ce2693e231_updated_teh_google_client_id_on_the_db.py  95db32db0a28_add_email_verification_fields.py  bb130732fc8d_initial_migrations.py
