[project]
name = "basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.138.0",
    "fastapi-mail>=1.6.5",
    "fastapi-utils>=0.8.0",
    "google-auth>=2.55.0",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.49.0",
    "alembic>=1.14.0",
    "redis>=5.0.0"
]
